// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdown transform > external snippet 1`] = `
"
\`\`\`ts {2|3|4}{lines:true}
function _foo() {
  // ...
}
\`\`\`
"
`;

exports[`markdown transform > inline CSS 1`] = `
"
# Page 

<style scoped>

h1 {
  color: red;
}
</style>

\`\`\`css
<style>
h1 {
  color: green;
}
</style>
\`\`\`
"
`;

exports[`markdown transform > mermaid 1`] = `
"
# Page 

<Mermaid :code="'c2VxdWVuY2VEaWFncmFtCiAgQWxpY2UtPkpvaG46IEhlbGxvIEpvaG4sIGhvdyBhcmUgeW91PwogIE5vdGUgb3ZlciBBbGljZSxKb2huOiBBIHR5cGljYWwgaW50ZXJhY3Rpb24'" v-bind="{}" />

<Mermaid :code="'Z3JhcGggVEQKQltUZXh0XSAtLT4gQ3tEZWNpc2lvbn0KQyAtLT58T25lfCBEW1Jlc3VsdCAxXQpDIC0tPnxUd298IEVbUmVzdWx0IDJd'" v-bind="{theme: 'neutral', scale: 0.8}" />
"
`;

exports[`markdown transform > slot-sugar 1`] = `
"
# Page 

Default Slot

<template v-slot:right="slotProps">

Right Slot


</template>
<template v-slot:left="slotProps">

<div>Left Slot</div>


</template>"
`;

exports[`markdown transform > slot-sugar with code 1`] = `
"
# Page 

Default Slot


<template v-slot:code="slotProps">


\`\`\`md
Slot Usage
::right::
::left::
\`\`\`



</template>"
`;

exports[`markdown transform > slot-sugar with default 1`] = `
"

<template v-slot:right="slotProps">

Right Slot


</template>
<template v-slot:left="slotProps">

<div>Left Slot</div>


</template>
<template v-slot:default="slotProps">

# Page 
Default Slot


</template>"
`;

exports[`markdown transform > slot-sugar with symbols in name 1`] = `
"
# Page 

Default Slot

<template v-slot:slot::1="slotProps">

First Slot


</template>
<template v-slot:slot.2="slotProps">

Second Slot


</template>"
`;
